opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_typerep_conv"
bug-reports: "https://github.com/janestreet/ppx_typerep_conv/issues"
dev-repo: "git+https://github.com/janestreet/ppx_typerep_conv.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_typerep_conv" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_core"
  "ppx_driver"
  "ppx_metaquot"
  "ppx_type_conv"
  "typerep"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Generation of runtime types from type declarations

Part of the Jane Street's PPX rewriters collection.
"
